--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -75,6 +75,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/ll_history"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
