--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -2,6 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll_root"
     android:background="@color/white"
     android:orientation="vertical">
@@ -41,7 +42,7 @@
                     android:textSize="12sp"
                     android:layout_marginLeft="8dp"
                     android:textColor="@color/black_title_color"
-                    android:text="陈思妥"/>
+                    tools:text="陈思妥"/>
 
                 <TextView
                     android:id="@+id/tv_time"
@@ -50,7 +51,7 @@
                     android:textSize="12sp"
                     android:layout_marginLeft="8dp"
                     android:textColor="@color/black_title_color"
-                    android:text="12-2 14:00"/>
+                    tools:text="12-2 14:00"/>
             </LinearLayout>
 
 
@@ -79,7 +80,7 @@
             android:id="@+id/tv_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="专门使用过来评价的 第一次不会用 没涂凝胶 那感觉是一个酸爽，赶紧去联系了客服"
+            tools:text="专门使用过来评价的 第一次不会用 没涂凝胶 那感觉是一个酸爽，赶紧去联系了客服"
             android:layout_marginLeft="10dp"
             android:maxLines="3"
             android:ellipsize="end"
