--- a/app/src/main/res/layout/layout_banner_graphic_and_text.xml
+++ b/app/src/main/res/layout/layout_banner_graphic_and_text.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
     <RelativeLayout
         android:id="@+id/rl_banner"
@@ -45,6 +45,7 @@
         android:paddingRight="12dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
+        android:visibility="gone"
         android:orientation="horizontal">
 
         <TextView
@@ -54,12 +55,13 @@
             android:textSize="12sp"
             android:text="￥"/>
         <TextView
+            android:id="@+id/tv_group_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:text="200.00"/>
+            tools:text="200.00"/>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -74,13 +76,14 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
                 android:textSize="12sp"
-                android:text="￥278.00"/>
+                tools:text="￥278.00"/>
             <TextView
+                android:id="@+id/tv_group_tip"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
                 android:textSize="12sp"
-                android:text="2人团，1人已参团"/>
+                tools:text="2人团，1人已参团"/>
 
 
         </LinearLayout>
