--- a/baselibrary/src/main/res/values-v19/dimens.xml
+++ b/baselibrary/src/main/res/values-v19/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="statusbar_view_height">24dp</dimen>
     <dimen name="statusbar_view_height_and_toolbar">74dp</dimen>
+    <dimen name="statusbar_view_height_and_toolbar1">-74dp</dimen>
 </resources>
