--- a/app/src/main/res/layout/fragment_shop_detail.xml
+++ b/app/src/main/res/layout/fragment_shop_detail.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:boy="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
 
@@ -36,11 +36,13 @@
 
 
 
-                    <ImageView
+                    <com.cinderellavip.weight.ScaleImageView
+                        android:id="@+id/iv_image"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:scaleType="centerCrop"
-                        android:src="@mipmap/demo_brand_image"/>
+                        app:scale="0.496"
+                        tools:src="@mipmap/demo_brand_image"/>
 
 
 
@@ -51,7 +53,7 @@
 
 
                 <com.cinderellavip.weight.FilterView
-                    android:id="@+id/tab_label"
+                    android:id="@+id/filter_view"
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
                     app:tabIndicatorHeight="0dp"
