店铺和品牌搜索

--- a/app/src/main/res/layout/activity_search_result_find.xml
+++ b/app/src/main/res/layout/activity_search_result_find.xml
@@ -33,6 +33,7 @@
             android:id="@+id/ll_search"
             android:layout_width="0dp"
             android:layout_weight="1"
+            android:layout_marginRight="12dp"
             android:background="@drawable/shape_gray50"
             android:layout_height="match_parent"
             android:layout_marginTop="10dp"
