--- a/app/src/main/res/layout/activity_address_edit.xml
+++ b/app/src/main/res/layout/activity_address_edit.xml
@@ -36,7 +36,7 @@
                 android:paddingRight="12dp"
                 android:paddingTop="12dp"
                 android:paddingBottom="12dp"
-                tools:text="何珍珍"
+                android:text="何珍珍"
                 />
 
 
@@ -72,7 +72,7 @@
                 android:paddingRight="12dp"
                 android:paddingTop="12dp"
                 android:paddingBottom="12dp"
-                tools:text="13166015579"/>
+                android:text="13166015579"/>
 
 
 
@@ -109,7 +109,7 @@
                 android:paddingRight="12dp"
                 android:paddingTop="12dp"
                 android:paddingBottom="12dp"
-                tools:text="上海-上海-闵行区"/>
+                android:text="上海 上海 闵行区"/>
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -150,7 +150,7 @@
                 android:paddingRight="12dp"
                 android:paddingTop="12dp"
                 android:paddingBottom="12dp"
-                tools:text="红点城"/>
+                android:text="红点城"/>
 
 
 
