--- a/app/src/main/res/layout/item_coupon.xml
+++ b/app/src/main/res/layout/item_coupon.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll_root"
     android:background="@mipmap/my_coupon_red_bg"
     android:layout_marginTop="12dp"
     android:layout_marginLeft="12dp"
     android:layout_marginRight="12dp"
     android:layout_width="match_parent"
-    android:layout_height="100dp" >
+    android:layout_height="100dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
@@ -39,7 +39,7 @@
                         style="@style/base_text_style_gray_small"
                         android:textColor="@color/red"
                         android:textSize="20sp"
-                        android:text="20"/>
+                        tools:text="20"/>
                 </LinearLayout>
 
                 <TextView
@@ -47,7 +47,7 @@
                     style="@style/base_text_style_gray_small"
                     android:textColor="@color/red"
                     android:layout_marginTop="20dp"
-                    android:text="满$500可用"/>
+                    tools:text="满$500可用"/>
             </LinearLayout>
 
         </RelativeLayout>
@@ -62,13 +62,13 @@
                 android:id="@+id/tv_name"
                 style="@style/base_text_style"
                 android:textSize="16sp"
-                android:text="欧莱雅优惠券"
+                tools:text="欧莱雅优惠券"
                 />
             <TextView
                 android:id="@+id/tv_time"
                 style="@style/base_text_style"
                 android:textSize="12sp"
-                android:text="有效期：2018.06.05-2019.08.15"
+                tools:text="有效期：2018.06.05-2019.08.15"
                 android:layout_marginTop="5dp"
                 />
             <LinearLayout
@@ -81,7 +81,7 @@
                     android:id="@+id/tv_type"
                     style="@style/base_text_style_gray_small"
                     android:layout_weight="1"
-                    android:text="全部商品可用"/>
+                    tools:text="全部商品可用"/>
                 <TextView
                     android:id="@+id/tv_use"
                     style="@style/base_btn_style"
