--- a/app/src/main/res/layout/item_coupon_center.xml
+++ b/app/src/main/res/layout/item_coupon_center.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll_root"
     android:layout_marginTop="12dp"
     android:layout_marginLeft="12dp"
     android:layout_marginRight="12dp"
     android:layout_width="match_parent"
-    android:layout_height="100dp" >
+    android:layout_height="100dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
@@ -28,7 +28,7 @@
                     style="@style/base_text_style"
                     android:textSize="16sp"
                     android:singleLine="true"
-                    android:text="欧莱雅优惠券"
+                    tools:text="欧莱雅优惠券"
                     />
 
 
@@ -48,14 +48,14 @@
                         style="@style/base_text_style_gray_small"
                         android:textColor="@color/red"
                         android:textSize="20sp"
-                        android:text="20"/>
+                        tools:text="20"/>
 
                     <TextView
                         android:id="@+id/tv_meet_money"
                         style="@style/base_text_style_gray_small"
                         android:textColor="@color/red"
                         android:background="@drawable/shape_yellow5"
-                        android:text="满200可用"
+                        tools:text="满200可用"
                         android:textSize="12sp"
                         android:paddingTop="2dp"
                         android:paddingBottom="2dp"
@@ -68,7 +68,7 @@
                 <TextView
                     android:id="@+id/tv_complain"
                     style="@style/base_text_style_gray_small"
-                    android:text="全部商品可用"/>
+                    tools:text="全部商品可用"/>
             </LinearLayout>
 
         </RelativeLayout>
@@ -88,7 +88,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:src="@mipmap/lqzx2"/>
+                    tools:src="@mipmap/lqzx2"/>
 
 
             <TextView
@@ -102,7 +102,7 @@
                 android:textSize="12sp"
                 android:layout_width="match_parent"
                 android:layout_marginTop="5dp"
-                android:text="立刻领取"/>
+                tools:text="立刻领取"/>
 
         </LinearLayout>
 
