--- a/app/src/main/res/layout/header_pay_result.xml
+++ b/app/src/main/res/layout/header_pay_result.xml
@@ -38,18 +38,16 @@
             android:layout_marginTop="10dp"
             android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/tv_pay_money"
-        style="@style/base_text_style"
-        android:text="实付￥188.00"
-        android:textSize="12sp"
-        android:layout_gravity="center_horizontal"
-        android:textColor="@color/grayText"
-        />
+        <TextView
+            android:id="@+id/tv_pay_money"
+            style="@style/base_text_style"
+            android:layout_gravity="center_horizontal"
+            tools:text="实付￥188.00"
+            android:textColor="@color/grayText"
+            android:textSize="12sp" />
 
 
-
-    <LinearLayout
+        <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
