--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/gray_bg"
     android:orientation="vertical">
 
@@ -51,14 +51,14 @@
                         style="@style/base_text_style"
                         android:textColor="@color/white"
                         android:textSize="16sp"
-                        android:text="代发货"
+                        tools:text="代发货"
 
                         />
                     <TextView
                         android:id="@+id/tv_status1"
                         style="@style/base_text_style"
                         android:textColor="@color/white"
-                        android:text="未支付订单将在00时55秒分后自动关闭"
+                        tools:text="未支付订单将在00时55秒分后自动关闭"
                         android:layout_marginTop="8dp"
                         android:visibility="gone"
                         android:textSize="12sp"
@@ -109,13 +109,13 @@
                             style="@style/base_text_style"
                             android:layout_marginTop="6dp"
                             android:textSize="12sp"
-                            android:text="黄埔正雄  131****5579" />
+                            tools:text="黄埔正雄  131****5579" />
 
                         <TextView
-
+                            android:id="@+id/tv_address"
                             style="@style/base_text_style"
                             android:layout_marginTop="4dp"
-                            android:text="上海 上海市 青浦区 华徐公路888号1号楼2楼ipd"
+                            tools:text="上海 上海市 青浦区 华徐公路888号1号楼2楼ipd"
                             android:textSize="12sp" />
 
                     </LinearLayout>
@@ -154,7 +154,7 @@
                     <TextView
                         android:id="@+id/tv_shop"
                         style="@style/base_text_style"
-                        android:text="夺伊服装店"
+                        tools:text="夺伊服装店"
                         android:padding="12dp"
                         android:drawableRight="@mipmap/right_black_icon"
                         android:drawablePadding="5dp"
@@ -163,12 +163,13 @@
 
 
                     <TextView
+                        android:id="@+id/tv_goods_number"
                         style="@style/base_text_style"
                         android:layout_weight="1"
                         android:gravity="right"
                         android:layout_marginRight="12dp"
                         android:textSize="12sp"
-                        android:text="（共计2件）" />
+                        tools:text="（共计2件）" />
 
                 </LinearLayout>
 
@@ -217,8 +218,9 @@
                             android:text="商品金额：" />
 
                         <TextView
+                            android:id="@+id/tv_goods_money"
                             style="@style/base_text_style_gray_small"
-                            android:text="￥178.00" />
+                            tools:text="￥178.00" />
 
                     </LinearLayout>
 
@@ -234,8 +236,9 @@
                         android:text="优惠金额：" />
 
                     <TextView
+                        android:id="@+id/tv_coupon_money"
                         style="@style/base_text_style_gray_small"
-                        android:text="-￥5.00" />
+                        tools:text="-￥5.00" />
 
                 </LinearLayout>
 
@@ -251,8 +254,9 @@
                             android:text="运费：" />
 
                         <TextView
+                            android:id="@+id/tv_tax"
                             style="@style/base_text_style_gray_small"
-                            android:text="+￥5.00" />
+                            tools:text="+￥5.00" />
 
                     </LinearLayout>
 
@@ -285,9 +289,10 @@
                         android:text="订单实付金额：" />
 
                     <TextView
+                        android:id="@+id/tv_pay_money"
                         style="@style/base_text_style"
                         android:textColor="@color/baseColor"
-                        android:text="￥123.00" />
+                        tools:text="￥123.00" />
                  </LinearLayout>
 
 
@@ -326,10 +331,11 @@
                     android:layout_marginLeft="12dp"
                     android:orientation="horizontal">
                     <TextView
+                        android:id="@+id/tv_order_id"
                         style="@style/base_text_style"
                         android:layout_weight="1"
                         android:textSize="12sp"
-                        android:text="订单编号：1234567890" />
+                        tools:text="订单编号：1234567890" />
 
                     <TextView
                         android:id="@+id/tv_copy"
@@ -345,8 +351,9 @@
 
 
                 <TextView
+                    android:id="@+id/tv_time_pay"
                     style="@style/base_text_style_gray_small"
-                    android:text="下单时间：2019-04-19 12:00:56"
+                    tools:text="下单时间：2019-04-19 12:00:56"
                     android:layout_marginLeft="12dp"
                     android:layout_marginTop="6dp"
                     android:layout_marginBottom="12dp"
@@ -356,7 +363,7 @@
                <TextView
                    android:id="@+id/tv_pay_way"
                     style="@style/base_text_style_gray_small"
-                   android:text="支付方式：微信支付"
+                   tools:text="支付方式：微信支付"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="-6dp"
                    android:layout_marginBottom="12dp"
@@ -367,7 +374,7 @@
                 <TextView
                     android:id="@+id/tv_send_time"
                     style="@style/base_text_style_gray_small"
-                    android:text="发货时间：2018.05.08 10:13:49"
+                    tools:text="发货时间：2018.05.08 10:13:49"
                     android:layout_marginLeft="12dp"
                     android:layout_marginTop="-6dp"
                     android:layout_marginBottom="12dp"
@@ -377,7 +384,7 @@
                 <TextView
                     android:id="@+id/tv_receive_time"
                     style="@style/base_text_style_gray_small"
-                    android:text="收货时间：2018.05.08 10:13:49"
+                    tools:text="收货时间：2018.05.08 10:13:49"
                     android:layout_marginLeft="12dp"
                     android:layout_marginTop="-6dp"
                     android:layout_marginBottom="12dp"
@@ -401,6 +408,7 @@
         style="@style/line_light"
         />
     <LinearLayout
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
@@ -418,7 +426,7 @@
             android:id="@+id/tv_btn_bottom1"
             style="@style/base_btn_style"
             android:layout_marginRight="12dp"
-            android:text="取消订单"
+            tools:text="取消订单"
             android:textColor="@color/black_title_color"
             android:background="@drawable/shape_line_gray50"/>
 
@@ -428,7 +436,7 @@
             android:background="@drawable/shape_line_red50"
             android:layout_marginRight="12dp"
             android:textColor="@color/red"
-            android:text="立即付款" />
+            tools:text="立即付款" />
 
 
     </LinearLayout>
