--- a/app/src/main/res/layout/item_logistics.xml
+++ b/app/src/main/res/layout/item_logistics.xml
@@ -86,7 +86,7 @@
                 android:paddingRight="12dp"
                 android:paddingTop="12dp"
                 android:paddingBottom="12dp"
-                android:text="【上海市】上海中转站-已进行装车扫描"/>
+                tools:text="【上海市】上海中转站-已进行装车扫描"/>
 
             <TextView
                 android:id="@+id/tv_time"
@@ -96,7 +96,7 @@
                 android:paddingLeft="12dp"
                 android:paddingRight="12dp"
                 android:paddingBottom="22dp"
-                android:text="2019-06-07 13:27"/>
+                tools:text="2019-06-07 13:27"/>
 
         </LinearLayout>
 
