--- a/app/src/main/res/layout/item_order_goods.xml
+++ b/app/src/main/res/layout/item_order_goods.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white">
 <LinearLayout
     android:layout_width="match_parent"
@@ -27,7 +27,7 @@
         android:layout_height="80dp"
         android:layout_gravity="center"
         android:scaleType="centerCrop"
-        android:src="@mipmap/demo_cardsale_banner1"/>
+        tools:src="@mipmap/demo_cardsale_banner1"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -44,8 +44,10 @@
                 android:id="@+id/tv_title"
                 android:layout_width="0dp"
                 android:layout_weight="1"
+                android:maxLines="2"
+                android:ellipsize="end"
                 android:layout_height="wrap_content"
-                android:text="吊带连衣裙女夏小清新2019款粉色格子裙法式仙女裙"
+                tools:text="吊带连衣裙女夏小清新2019款粉色格子裙法式仙女裙"
                 android:textSize="14sp"
                 android:textColor="@color/black_title_color"/>
 
@@ -61,7 +63,7 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:text="规格：L"
+            tools:text="规格：L"
             android:textSize="12sp"
             android:layout_marginTop="3dp"
             android:textColor="@color/grayText"/>
@@ -81,7 +83,7 @@
                 android:layout_weight="1"
                 android:layout_marginTop="3dp"
                 android:layout_height="wrap_content"
-                android:text="￥90.00"
+                tools:text="￥90.00"
                 android:layout_marginLeft="3dp"
                 android:textSize="14sp"
                 android:textColor="@color/baseColor"/>
@@ -90,7 +92,7 @@
                 android:id="@+id/tv_number"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="数量x1"
+                tools:text="数量x1"
                 android:gravity="center"
                 android:textSize="12sp"
                 android:textColor="@color/black_title_color"/>
