--- a/baselibrary/src/main/res/layout/view_load_more.xml
+++ b/baselibrary/src/main/res/layout/view_load_more.xml
@@ -49,14 +49,16 @@
     <FrameLayout
         android:id="@+id/load_more_load_complete_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone">
+        android:layout_height="0dp"
+        android:visibility="gone"
+        >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="戳我，还有更多惊喜内容👇"
+            android:visibility="gone"
+            android:text=""
             android:textColor="@android:color/darker_gray"/>
     </FrameLayout>
 
