--- a/app/src/main/res/layout/view_cart_number.xml
+++ b/app/src/main/res/layout/view_cart_number.xml
@@ -8,6 +8,8 @@
         android:layout_width="90dp"
         android:layout_height="25dp"
         android:orientation="horizontal"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:background="@drawable/shape_gray50_eeeeee">
 
         <RelativeLayout
@@ -39,6 +41,8 @@
             android:inputType="number"
             android:gravity="center"
             android:textSize="14sp"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:textColor="@color/black_title_color"/>
 
 
